--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,9 +14,10 @@
  *= require dataTables/jquery.dataTables
  *= require_self
  */
- body { padding-top: 90px; }
+html {position: relative;min-height: 100%;}
+body {margin-bottom: 60px;}
 /*BOOTSTRAP*/
-
+.content {padding-top: 90px;}
 .navbar-brand {
   padding: 15px 15px;
 }
@@ -33,6 +34,11 @@
 .form-inputs span {display: block;}
 
 
+.alert {    position: absolute;
+    z-index: 99999999999;
+    top: 10px;
+    right: 10px;
+    min-width: 240px;}
 /*BTN*/
 .btn-full {width: 100%;}
 
@@ -44,3 +50,11 @@
 
 /* LOG IN */
 .user_remember_me {margin-left: 20px;}
+
+#bg {position: fixed;top: -50%;left: -50%;width: 200%;height: 200%;background-color: #337ab7;}
+#bg img {position: absolute;top: 0;left: 0;right: 0;bottom: 0;margin: auto;min-width: 50%;min-height: 50%;}
+
+.card {border-radius: 2px;background: #fff;width: 100%;height: 320px;padding: 15px;margin-top: 110px;}
+.card .logo {display: block;margin: 0 auto;margin-bottom: 30px;}
+
+.footer {position: absolute;bottom: 0;width: 100%;height: 60px;background-color: #f5f5f5;}
